# openCV_FaceDetection

./: Makefile.am  Makefile.in  README.md  conf.sh  configure.ac
src/: Makefile.in  face_detect.hpp  fd_cpu.cpp  fd_gpu.cpp  main.cpp
